chore: replace explicit variable types with `var` for improved readability and consistency; migrate multiline Python script strings to raw `"""` strings in STT/TTS logic